Bug 267874 - Embedder should be able to ignore WKApplicationUtilities links
Summary: Embedder should be able to ignore WKApplicationUtilities links
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ben Nham
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-22 12:56 PST by Ben Nham
Modified: 2024-01-22 17:07 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Nham 2024-01-22 12:56:22 PST
We currently handle Vorst links unconditionally. We should instead give the embedded a chance to either explicitly allow or deny such links.
Comment 1 Ben Nham 2024-01-22 12:56:40 PST
rdar://121389168
Comment 2 Ben Nham 2024-01-22 13:11:57 PST
Pull request: https://github.com/WebKit/WebKit/pull/23060
Comment 3 EWS 2024-01-22 17:07:04 PST
Committed 273331@main (101cda37cddc): <https://commits.webkit.org/273331@main>

Reviewed commits have been landed. Closing PR #23060 and removing active labels.