Cherry-pick 101cda37cddc. rdar://121530439

Embedder should be able to ignore app utilities links
    https://bugs.webkit.org/show_bug.cgi?id=267874
    rdar://121389168

    Reviewed by Brady Eidson.

    Currently we unconditionally handle all WKApplicationUtilities links in WebKit without notifying the
    embedder via the navigation delegate.

    To be more consistent with other types of link handling, we should instead notify the navigation
    delegate about such links, and only handle them in WebKit if the embedder responds to the delegate
    callback telling us to process that link (e.g. via WKNavigationActionPolicyAllow).

    * Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
    (WebKit::tryInterceptNavigation):
    (WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction):

    Canonical link: https://commits.webkit.org/273331@main

Canonical link: https://commits.webkit.org/272448.354@safari-7618-branch